application/brennoflavio/home-vad/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-vad
  namespace: home-vad
spec:
  type: ClusterIP
  selector:
    app: home-vad
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
